--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Game</title>
+    <title>Teravia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div>
